# erge

./: .gitignore  Cargo.toml  LICENSE  README.md
enum-macro/: Cargo.toml
strut-macro/: Cargo.toml  README.md
strut-macro/src/: debug.rs  default.rs  display.rs  equals.rs  get.rs  get_mut.rs  lib.rs  new.rs  set.rs  to_dbg.rs  to_string.rs  with.rs
strut-macro/src/util/: field.rs
strut-macro/tests/: kk.json  test_set.rs
