[package]
name = "strut-macro"
version = "0.1.0"
edition = "2021"
description = "This is a macro tools for rust struct"
readme = "README.md"
license = "MIT"
repository = "https://github.com/chenjitong/erge"
documentation = "https://docs.rs/erge"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = "2.0.63"
